# wgpui

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: run_tests.yml
crates/gpui/src/: app.rs  executor.rs  geometry.rs  interactive.rs  platform.rs  scene.rs  styled.rs  taffy.rs  window.rs
crates/gpui/src/app/: context.rs  entity_map.rs  test_app.rs  test_context.rs  visual_test_context.rs
crates/gpui/src/elements/: anchored.rs  div.rs  external_surface.rs  img.rs  mod.rs  shader_surface.rs  uniform_list.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui_linux/src/linux/wayland/: client.rs  window.rs
crates/gpui_linux/src/linux/x11/: client.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: events.rs  gpui_macos.rs  metal_renderer.rs  screen_capture.rs  wgpu_renderer.rs  window.rs
crates/gpui_platform/src/: gpui_platform.rs
crates/gpui_web/src/: events.rs
crates/gpui_wgpu/: CUSTOM_SHADER.md  Cargo.toml
crates/gpui_wgpu/examples/: spinning_cube.rs
crates/gpui_wgpu/src/: gpui_wgpu.rs  wgpu_context.rs  wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_windows/src/: directx_renderer.rs  events.rs  gpui_windows.rs  wgpu_renderer.rs  window.rs
crates/ui/src/components/: popover_menu.rs  right_click_menu.rs  scrollbar.rs
examples/gpui-example/src/: main.rs
nix/modules/: devshells.nix
